<resources>
    <string name="app_name">Spotify Plus</string>
    <string name="app_desc">Unlock the full power of your Spotify app</string>

    <string name="album_cover_desc">Album cover</string>
    <string name="written_by">Written by: %1$s</string>
    <string name="lastfm_info">Currently set to %1$s</string>
    <string name="open_last_fm">Open in Last.fm</string>
    <string name="settings_label">Spotify Plus Settings</string>
    <string name="update_modal_header">Update Available</string>
    <string name="update_modal_subtitle">A new version of Spotify Plus is available</string>
    <string name="update_modal_download">Download</string>
    <string name="update_modal_dismiss">Dismiss</string>
    <string name="update_modal_compare">Current: v%1$s  •  Latest: v%2$s</string>
    <string name="last_fm_modal_header">Connect Last.fm</string>
    <string name="last_fm_modal_subtitle">Enter your Last.fm username so Spotify Plus can show you your scrobbles</string>
    <string name="last_fm_modal_text">Last.fm Username</string>
    <string name="last_fm_modal_submit">Submit</string>
    <string name="last_fm_modal_clear">Clear Username</string>
    <string name="last_fm_modal_cancel">Cancel</string>

    <string name="settings_title">Spotify Plus Settings</string>
    <string name="general_title">General</string>
    <string name="lyrics_title">Lyrics</string>
    <string name="about_title">About</string>

    <string name="general_section">General</string>
    <string name="general_subtitle">Check for updates • Startup page</string>
    <string name="lyrics_section">Lyrics</string>
    <string name="lyrics_subtitle">Lyrics Font • Interlude Duration</string>
    <string name="about_section">About</string>
    <string name="about_subtitle">GitHub • Telegram</string>

    <string name="general_header">General</string>
    <string name="check_updates">Check For Updates</string>
    <string name="check_updates_desc">Whether to check for updates on start</string>
    <string name="last_fm_username">Set Last.fm Username</string>
    <string name="last_fm_username_desc">Sets the username for retrieving your scrobbles</string>
    <string name="last_fm_button_text">Set Username</string>
    <string name="block_ads">Block Ads (Beta)</string>
    <string name="block_ads_desc">Blocks ads across the app. This feature is still in beta, please report any issues on the GitHub</string>
    <string name="block_telemetry">Block Telemetry (Beta)</string>
    <string name="block_telemetry_desc">Blocks Spotify tracking requests</string>

    <string name="ui_header">UI</string>
    <string name="remove_create_button">Remove Create Button</string>
    <string name="remove_create_button_desc">Removes the create button in the navbar</string>
    <string name="start_page">Startup Page</string>
    <string name="start_page_desc">What page Spotify should open when you first start the app</string>
    <string name="start_page_home">Home</string>
    <string name="start_page_search">Search</string>
    <string name="start_page_explore">Explore</string>
    <string name="start_page_library">Library</string>
    <string name="animated_album_artwork">Animated Album Artwork</string>
    <string name="animated_album_artwork_desc">Shows animated album artwork for albums that support it</string>

    <string name="lyrics_visuals_header">Visuals</string>
    <string name="animation_style">Animation Style</string>
    <string name="animation_style_desc">Whether lyrics should be animated more like Beautiful Lyrics or Apple Music</string>
    <string name="animation_style_default">Beautiful Lyrics</string>
    <string name="animation_style_apple">Apple Music</string>
    <string name="lyrics_font">Lyrics Font</string>
    <string name="lyrics_font_desc">What font to use for the lyrics</string>
    <string name="lyrics_font_spotify">Spotify</string>
    <string name="lyrics_font_default">Beautiful Lyrics</string>
    <string name="lyrics_font_apple">Apple</string>
    <string name="interlude_duration">Interlude Duration</string>
    <string name="interlude_duration_desc">The minimum amount of time it takes for an interlude to show up</string>
    <string name="interlude_default">Beautiful Lyrics</string>
    <string name="interlude_spicy">Spicy Lyrics</string>
    <string name="interlude_spotifyplus">Spotify Plus</string>
    <string name="interlude_apple">Apple Music</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="line_spacing_desc">The amount of space in between lines. A larger amount will have a larger font size and more space in between lines, resulting in fewer lines being visible</string>
    <string name="line_spacing_compact">Compact</string>
    <string name="line_spacing_default">Default</string>
    <string name="line_spacing_spacious">Spacious</string>
    <string name="line_spacing_more">More</string>
    <string name="line_spacing_max">Max</string>
    <string name="enable_background">Enable Animated Background</string>
    <string name="enable_background_desc">Whether the background should be an animated background or just a static color</string>
    <string name="enable_line_gradient">Enable Line Gradient</string>
    <string name="enable_line_gradient_desc">Sets whether lines should have a gradient or stay a solid color in line synced lyrics</string>
    <string name="background_quality">Background Quality</string>
    <string name="background_quality_desc">Changes the quality of the animated background. Lower quality should give better performance at the cost of detail and variance in colors</string>
    <string name="background_quality_high">Quality</string>
    <string name="background_quality_mid">Balanced</string>
    <string name="background_quality_low">Performance</string>
    <string name="background_quality_superlow">Ultra Performance</string>

    <string name="version_label">Version</string>
    <string name="github_label">GitHub</string>
    <string name="telegram_label">Telegram</string>
    <string name="made_by_label">Made With ♡ By</string>
</resources>